Added margin between search and current locator selector

--- a/src/app.css
+++ b/src/app.css
@@ -71,6 +71,7 @@
   padding: 0;
 }
 .current-location {
+  margin-top: 1rem;
   color: rgb(112, 112, 128);
   text-decoration: underline;
   border: none;
