--- a/src/app.css
+++ b/src/app.css
@@ -43,8 +43,7 @@ body {
 }
 
 .weather-active-tab {
-  margin: 1rem;
-  margin-right: 0;
+  margin: 0 1rem;
   border-radius: 10px;
 }
 
@@ -73,14 +72,18 @@ body {
   list-style: none;
   padding: 0;
 }
+
+.wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
 .current-location {
+  display: flex;
   margin-top: 1rem;
   color: rgb(112, 112, 128);
   text-decoration: underline;
   border: none;
   background-color: #fff;
-  float: right;
-  line-height: 2rem;
 }
 
 .footer {
